# breakout

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
src/: main.cpp
src/breakout/controller/: GameController.cpp  GameController.hpp
src/breakout/model/: GameState.cpp  GameState.hpp
src/breakout/utils/: Visitor.hpp
src/breakout/view/: GameView.cpp  GameView.hpp
src/pong/model/: GameState.hpp
tools/: build.sh  clang-format.sh
